Issue #426: wrap anywhere all long values in diff report

--- a/patch-diff-report-tool/src/main/resources/maven-theme.css
+++ b/patch-diff-report-tool/src/main/resources/maven-theme.css
@@ -122,6 +122,9 @@ table.bodyTable td.c {
   background-color: #eee;
 }
 
+.wrap-anywhere {
+  word-break: break-all;
+}
 .source {
   border: 1px solid #999;
 }
